--- a/Project-files/index.html
+++ b/Project-files/index.html
@@ -12,7 +12,48 @@
 <body>
     <div class="title">
         <h2>Changelog</h2>
-        <p>Here's everything we have shipped in the past few days</p>
+        <p class="subtitle">Here's everything we have shipped in the past few days</p>
     </div>
+        <div class="time-line">
+            <div class="timeline-item">
+                <span class="date">September 3, 2024</span>
+                <span class="dot"></span>
+                <p class="text">Announcing Projects on Frontend Roadmap</p>
+            </div>
+            <div class="timeline-item">
+                <span class="date">September 3, 2024</span>
+                <span class="dot"></span>
+                <p class="text">Announcing Projects on Frontend Roadmap</p>
+            </div>
+            <div class="timeline-item">
+                <span class="date">September 3, 2024</span>
+                <span class="dot"></span>
+                <p class="text">Announcing Projects on Frontend Roadmap</p>
+            </div>
+            <div class="timeline-item">
+                <span class="date">September 3, 2024</span>
+                <span class="dot"></span>
+                <p class="text">Announcing Projects on Frontend Roadmap</p>
+            </div>
+            <div class="timeline-item">
+                <span class="date">September 3, 2024</span>
+                <span class="dot"></span>
+                <p class="text">Announcing Projects on Frontend Roadmap</p>
+            </div>
+            <div class="timeline-item">
+                <span class="date">September 3, 2024</span>
+                <span class="dot"></span>
+                <p class="text">Announcing Projects on Frontend Roadmap</p>
+            </div>
+            <div class="timeline-item">
+                <span class="date">September 3, 2024</span>
+                <span class="dot"></span>
+                <p class="text">Announcing Projects on Frontend Roadmap</p>
+            </div>
+        </div>
+            
+    <button class="changelog-btn">
+                Visit Complete Changelog
+    </button>
 </body>
 </html>
