--- a/Project-files/index.html
+++ b/Project-files/index.html
@@ -16,44 +16,52 @@
     </div>
         <div class="time-line">
             <div class="timeline-item">
+                <span class="arrow">•</span>
                 <span class="date">September 3, 2024</span>
-                <span class="dot"></span>
+                <span class="arrow">►</span>
                 <p class="text">Announcing Projects on Frontend Roadmap</p>
             </div>
             <div class="timeline-item">
+                <span class="arrow">•</span>
                 <span class="date">September 3, 2024</span>
-                <span class="dot"></span>
+                <span class="arrow">►</span>
                 <p class="text">Announcing Projects on Frontend Roadmap</p>
             </div>
             <div class="timeline-item">
+                <span class="arrow">•</span>
                 <span class="date">September 3, 2024</span>
-                <span class="dot"></span>
+                <span class="arrow">►</span>
                 <p class="text">Announcing Projects on Frontend Roadmap</p>
             </div>
             <div class="timeline-item">
+                <span class="arrow">•</span>
                 <span class="date">September 3, 2024</span>
-                <span class="dot"></span>
+                <span class="arrow">►</span>
                 <p class="text">Announcing Projects on Frontend Roadmap</p>
             </div>
             <div class="timeline-item">
+                <span class="arrow">•</span>
                 <span class="date">September 3, 2024</span>
-                <span class="dot"></span>
+                <span class="arrow">►</span>
                 <p class="text">Announcing Projects on Frontend Roadmap</p>
             </div>
             <div class="timeline-item">
+                <span class="arrow">•</span>
                 <span class="date">September 3, 2024</span>
-                <span class="dot"></span>
+                <span class="arrow">►</span>
                 <p class="text">Announcing Projects on Frontend Roadmap</p>
             </div>
             <div class="timeline-item">
+                <span class="arrow">•</span>
                 <span class="date">September 3, 2024</span>
-                <span class="dot"></span>
+                <span class="arrow">►</span>
                 <p class="text">Announcing Projects on Frontend Roadmap</p>
             </div>
         </div>
-            
-    <button class="changelog-btn">
-                Visit Complete Changelog
-    </button>
+    <div class="button-bar">
+        <button class="changelog-btn">
+            Visit Complete Changelog
+        </button>
+    </div>            
 </body>
 </html>
